fix footer spacing

--- a/src/pages/root/Footer.module.css
+++ b/src/pages/root/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
   background-color: var(--color-black);
   color: var(--color-white);
-  padding: 9.6rem 0 7.2rem;
+  padding: 7.2rem 0 7.2rem;
 }
 
 .center {
